--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
   </div>
 
-  <p class="text-center">    
-    <a href="#" class="btn btn-primary">Reset</a>
+<p class="text-center">    
+    <a href="#" class="btn btn-primary" ng-click="reset()">Reset</a>
   </p>
 
 </div>  
